--- a/2020/materials/day3-text-analysis/text-networks/rmarkdown/Text_Networks.Rmd
+++ b/2020/materials/day3-text-analysis/text-networks/rmarkdown/Text_Networks.Rmd
@@ -7,18 +7,17 @@ output:
 ---
 
 <br>
-**[Text as Data Course](https://cbail.github.io/textasdata/Text_as_Data.html)**   
 **Chris Bail, PhD**  
 **Duke University**  
 [www.chrisbail.net](http://www.chrisbail.net)  
 [github.com/cbail](https://github.com/cbail)  
 [twitter.com/chris_bail](https://twitter.com/chris_bail)   
 
-# Introduction
+## Introduction
 
 This is the last in a series of tutorials designed to introduce quantitative text analysis in R. This tutorial focuses upon one of the newest methods in this field, called Text Networks.
 
-# What is a Text Network?
+## What is a Text Network?
 
 Network analysis refers to a family of methods that describe relationships between units of analysis. A network is comprised of nodes as well as the edges or connections between them. In a social network---such as the one in the figure below---nodes are often individual people, and edges describe friendships, affiliations, or other types of social relationships. A rich theoretical tradition in the social sciences describes how patterns of clustering within social networks---and an individual's position within or between clusters--- is associated with a remarkably wide range of outcomes including health, employment, education, and many others.
 <br>
@@ -29,12 +28,12 @@ Though network analysis is most often used to describe relationships between peo
 
 There are multiple advantages to a network-based approach to automated text analysis. Just as clusters of social connections can help explain a range of outcomes, understanding patterns of connections between words helps identify their meaning in a more precise manner than the "bag of words" approaches discussed in earlier tutorials. Second, text networks can be built out of documents of any length, whereas topic models function poorly on short texts such as social media messages. Finally, there is an arguably more sophisticated set of techniques for identifying clusters within social networks than those employed in other automated text analysis techniques described in my earlier tutorials.
 
-# Two-Mode Networks
+## Two-Mode Networks
 
-Before we move on to a working example, we will need to delve a little bit deeper into some terminology from network analysis---specifically, the concept of two-mode networks. To clarify this concept, let's take the example of a network where the first node set is words found in US newspaper headlines on the day of the first moon landing (July 20, 1969), and the second node set is the newspapers themselves. The data would look something like this:
+Before we move on to a working example, we will need to delve a little bit deeper into some terminology from network analysis---specifically, the concept of two-mode networks. To clarify this concept, let's look at a hypothetical group of Twitter users tweeting about the COVID-19 pandemic, pictured in the diagram below:
 
 <br>
-![](moon_landing.png)
+![](TextNets_Diagram.png){width=400px}
 <br>
 
 Here is a two-mode projection of this network. As you can see, edges are only drawn between newspapers and words (i.e. nodes belonging to different sets).
@@ -53,7 +52,7 @@ In text networks, one node set will always be comprised of the words found in th
 For a more detailed introduction to text networks see Bail (2016) or Rule et. al (2015). The references to both of these articles are below.
 
 
-# The `Textnets` Package
+## The `Textnets` Package
 
 The only R package presently available to implement text network techniques is the `textnets` package. The most current version of the `textnets` package is currently available on Github. To install `textnets`---or any other package hosted on Github--- you will need the `devtools` package (see code below). `textnets` can take some time to install because it has a number of dependencies that are themselves complex packages.
 
@@ -74,7 +73,7 @@ The `textnets` package provides the following functions:
 
 We will work through each of these steps one-by-one with a working example in the following sections.
 
-# Preparing Texts
+## Preparing Texts
 
 The `textnets` package requires text that is contained within a dataframe, where each row represents a document. The text of each document must be contained within a single column, but the dataframe can also include other columns that describe meta data such as the author's name or date of publication. 
 
@@ -114,7 +113,7 @@ On a 2017 MacBook Pro (with a 2.3 GHz i5 & 8 GB ram), the code below took a litt
 prepped_sotu <- PrepText(sotu_first_speeches, groupvar = "president", textvar = "sotu_text", node_type = "groups", tokenizer = "words", pos = "nouns", remove_stop_words = TRUE, compound_nouns = TRUE)
 ```
 
-# Creating Text Networks
+## Creating Text Networks
 
 The workhorse function within the textnets package is the CreateTextnet function. This function reads in an object created using the `PrepText` function and outputs an igraph object based on a weighted adjacency matrix, or a square matrix where the rows and columns correspond to either the groups of the group variable (if the user specificed `node_type = "groups"` in the previous stage), or words (if the user specified `node_type = "words"`). The cells of the adjacency matrix are the transposed crossproduce of the term-frequency inverse-document frequency (TFIDF) for overlapping terms between two documents for PrepText and the matrix product of TFIDF crosspropduct (See Bail, 2016).
 
@@ -124,7 +123,7 @@ sotu_text_network <- CreateTextnet(prepped_sotu)
 
 
 
-# Visualizing Text Networks
+## Visualizing Text Networks
 
 
 The textnets package includes two functions to visualize text networks created in the previous steps. The `VisualizeText` function creates a network diagram where nodes are colored by their cluster or modularity class (see previous section). In many cases, text networks will be very dense (that is, there will be a very large number of edges because most documents share at least one word). Visualizing text networks therefore creates inherent challenges, because such dense networks are very cluttered. To make text networks more readable, the `VisTextNet` function employs a "network backbone" technique which deletes edges using a disparity filter algorithm to trim edges that are not informative. By default, the function uses a tuning parameter called alpha which is set to .25. The user can specify different levels of alpha to trim more or less of the network. The `VisTextNet` function also includes an argument that determines which nodes will be labeled, since network visualizations with too many node labels can be difficult to interpret. The user specifies an argument called `label_degree_cut` which specifies the degree, or number of connections, that nodes should have to get labeled. For example, if the user only wants nodes that have at least 0 connections to other nodes to be labeled, they would use the following code:
@@ -160,7 +159,7 @@ saveWidget(vis, "sotu_textnet.html")
 
 
 
-# Analyzing Text Networks
+## Analyzing Text Networks
 In order to group documents according to their similarity-- or in order to identify latent themes across texts-- users may wish to cluster documents or words within text networks. The TextCommunities function applies the Louvain community detection algorithm to do this, which automatically uses the edge weights and determines the number of clusters within a given network. The function outputs a dataframe with the cluster or "modularity" class to which each document or word has been assigned.
 
 ```{r}
@@ -184,7 +183,7 @@ Often in social networks, researchers wish to calculate measures of influence or
 text_centrality <- TextCentrality(sotu_text_network)
 ```
 
-# References
+## References
 
 Bail, Christopher A. 2016. "Combining Network Analysis and Natural Language Processing to Examine how Advocacy Organizations Stimulate Conversation on Social Media." *Proceedings of the National Academy of Sciences*, 113:42 11823-11828
 
