add warning for 2021 hehe

--- a/2021/materials/day4-surveys/activity/survey_activity_2020_solution.Rmd
+++ b/2021/materials/day4-surveys/activity/survey_activity_2020_solution.Rmd
@@ -351,6 +351,7 @@ model_predictions <- as.data.frame(matrix(nrow = nrow(population_counts),
                                           ncol = length(relevant_questions), NA))
 colnames(model_predictions) <- relevant_questions
 # loop through
+# TODO: when renaming the outcome column, different versions of R seem to have inconsistency
 for (i in relevant_questions) {
   # get outcome
   outcome <- data_factor[ , i] %>% as.vector()
