--- a/bootcamp_quizzes/data_visualization.Rmd
+++ b/bootcamp_quizzes/data_visualization.Rmd
@@ -2,7 +2,9 @@
 title: "Data Visualization Quiz"
 author: "Summer Institutes in Computational Social Science"
 date: ""
-output: html_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
