--- a/bootcamp_quizzes/modelling.Rmd
+++ b/bootcamp_quizzes/modelling.Rmd
@@ -2,7 +2,9 @@
 title: "Modelling Quiz"
 author: "Summer Institutes in Computational Social Science"
 date: ""
-output: html_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 
 **Additional Resources:** 
