update survey activity

--- a/2021/materials/day4-surveys/activity/intro-to-activity.tex
+++ b/2021/materials/day4-surveys/activity/intro-to-activity.tex
@@ -55,8 +55,6 @@ Activity:
 \item Compare results from your survey to the results from the high-quality survey
 \pause
 \item Try different approaches to weighting and see how the change the estimates
-\pause
-\item Ideal but not possible because of time constraints: De-identify and ``open-source'' data by sending to your local organizer (but remember to think about the end at the beginning)
 \end{itemize}
 
 \end{frame}
@@ -72,6 +70,7 @@ This activity will give you practice:
 \item Analyzing survey data (data wrangling and post-stratification)
 \pause
 \item Using the total survey error framework to consider and discuss errors in estimates
+\pause
 \end{itemize}
 
 \vfill
@@ -81,55 +80,34 @@ Remember: This is a learning activity so try whatever you want and don't expect 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-Our recommended work flow:
 \begin{itemize}
-\item Create a short write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)}); this will be presented to your survey participants
+\item Start with our template and create your survey
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-Our recommended work flow:
+The template includes:
 \begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)})
-\item Create survey on Google Forms (we have a \href{https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day4-surveys/activity/2019-06-13_mturk_google_survey.pdf}{template})
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\begin{tabular}{ccc}
-\includegraphics[width=0.30\textwidth]{figures/MTurk_survey_grid} & \phantom{12} \LARGE{or} \phantom{12}  & \includegraphics[width=0.30\textwidth]{figures/MTurk_survey_list}
-\end{tabular}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Collect the information that you will need for post-stratification: \pause
-\begin{itemize}
-\item gender
-\item age
-\item state of residence
-\item race/ethnicity
-\end{itemize}
-
-How should you ask these questions?  \pause You should copy from the American Community Survey.
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Our recommended work flow:
-\begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)})
-\item Create survey on Google Forms (we have a \href{https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day4-surveys/activity/2019-06-13_mturk_google_survey.pdf}{template})
+\item information about who is collecting the data, why, and how it will be used
 \pause
-\item Deploy to MTurk
+\item questions you will use for post-stratification (e.g., gender, age, state of residence, race/ethnicity); we copied these questions from the American Community Survey
+\pause
+\item attention check questions
+\pause
+\item question to collect the Turk ID so that you can pay your participants
+\end{itemize}
+
+You will need to add the questions from the Pew surveys
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+Our recommended work flow:
+\begin{itemize}
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
 \end{itemize}
 
 \end{frame}
@@ -151,10 +129,20 @@ Last year, every group made at least one error deploying their relatively simple
 
 Our recommended work flow:
 \begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)})
-\item Create survey on Google Forms (we have a \href{https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day4-surveys/activity/2019-06-13_mturk_google_survey.pdf}{template})
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
 \item Deploy to MTurk
-\pause
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+Our recommended work flow:
+\begin{itemize}
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
+\item Deploy to MTurk
 \item Take a break
 \end{itemize}
 
@@ -172,11 +160,10 @@ Our recommended work flow:
 
 Our recommended work flow:
 \begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)})
-\item Create survey on Google Forms
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
 \item Deploy to MTurk
 \item Take a break
-\pause
 \item Validate and pay workers
 \pause
 \item Analyze the much larger sample that we have collected for you
@@ -275,8 +262,11 @@ Three increasingly sophisticated ways to make group estimate $\hat{\bar{y}}_h$. 
 
 \begin{itemize}
 \item The data that we are providing you for analysis comes from a survey we deployed on MTurk recently
-\item We will compare to high-quality telephone surveys from the Pew Research Center (links to \href{https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day4-surveys/activity/2019_pew_benchmark_data.csv}{questionnaires})
+\pause
+\item We will compare to high-quality surveys from the Pew Research Center 
+\pause
 \item To poststratify our survey data, we will use data from the American Community Survey about the population of the United States
+\pause
 \item We use multiple questions because estimates are also a property of a question not just a sample.
 \end{itemize}
 
@@ -433,28 +423,27 @@ Generally cautious:
 
 Our recommended work flow:
 \begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer (2018)})
-\item Create survey on Google Forms
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
 \item Deploy to MTurk
 \item Take a break
 \item Validate and pay workers
 \item Analyze the much larger sample that we have collected for you
-\item Ideal but not possible because of time constraints: De-identify and ``open-source'' data by sending to your local organizer (but remember to think about the end at the beginning)
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{figure}
-  \centering
-  \includegraphics[width=0.9\textwidth]{figures/pandas_video}
-\end{figure}
-
-\url{https://www.youtube.com/watch?v=66oNv_DJuPc}\\
-YouTube search: ``Data Sharing and Management Snafu in 3 Short Acts''
-
-\end{frame}
+%\begin{frame}
+%
+%\begin{figure}
+%  \centering
+%  \includegraphics[width=0.9\textwidth]{figures/pandas_video}
+%\end{figure}
+%
+%\url{https://www.youtube.com/watch?v=66oNv_DJuPc}\\
+%YouTube search: ``Data Sharing and Management Snafu in 3 Short Acts''
+%
+%\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{frame}
 %
@@ -612,13 +601,12 @@ When you start your projects next week
 
 Our recommended work flow:
 \begin{itemize}
-\item Create a write-up that describes what data you will be collecting, why, and how it will be shared with others (for tips, see \href{https://doi.org/10.1177/2515245917747656}{Meyer})
-\item Create survey on Google Forms
+\item Start with our template and create your questionnaire
+\item Test your questionnaire
 \item Deploy to MTurk
 \item Take a break
 \item Validate and pay workers
 \item Analyze the much larger sample that we have collected for you
-\item Ideal but not possible because of time constraints: De-identify and ``open-source'' data by sending to your local organizer (but remember to think about the end at the beginning)
 \end{itemize}
 
 \end{frame}
