Update Replication Codes_Collecting Digital Trace Data.Rmd

--- a/2021/materials/istanbul/Replication Codes_Collecting Digital Trace Data.Rmd
+++ b/2021/materials/istanbul/Replication Codes_Collecting Digital Trace Data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Task 1 and 2_Replication codes_Pre-SICSS2021"
+title: "Replication codes_Collecting Digital Trace Data"
 author: "Ahmet Kurnaz"
 date: "30 05 2021"
 output: slidy_presentation
