update survey activity slides

--- a/2021/materials/day4-surveys/activity/intro-to-activity.tex
+++ b/2021/materials/day4-surveys/activity/intro-to-activity.tex
@@ -92,13 +92,14 @@ The template includes:
 \begin{itemize}
 \item information about who is collecting the data, why, and how it will be used
 \pause
-\item questions you will use for post-stratification (e.g., gender, age, state of residence, race/ethnicity); we copied these questions from the American Community Survey
+\item questions you will use for post-stratification (e.g., sex, age, state of residence, race/ethnicity)
 \pause
 \item attention check questions
 \pause
-\item question to collect the Turk ID so that you can pay your participants
+\item question to collect the Turk ID so that you can pay your respondents
 \end{itemize}
 
+\vfill
 You will need to add the questions from the Pew surveys
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,7 +107,7 @@ You will need to add the questions from the Pew surveys
 
 Our recommended work flow:
 \begin{itemize}
-\item Start with our template and create your questionnaire
+\item Start with our template and create your questionnaire \pause
 \item Test your questionnaire
 \end{itemize}
 
